--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -6,28 +6,7 @@
 </div>
 
 <div class="messages">
-  <div class="message">
-    <div class="users">
-      <div class="user-name">Tom</div>
-      <div class="dates">2020/3/31(Wed) 12:43:30</div>
-    </div>
-    <div class="lower-message">
-      <div class="text">
-        おはよう
-      </div>
-    </div>
-  </div>
-  <div class="message">
-    <div class="users">
-      <div class="user-name">Tom</div>
-      <div class="dates">2020/3/30(Wed) 12:43:30</div>
-    </div>
-    <div class="lower-message">
-      <div class="text">
-        こんにちは
-      </div>
-    </div>
-  </div>
+  <%= render partial: 'message', collection: @messages %>
 </div>
 
 <%= form_with model: [@room, @message], html: {class: "form"}, local: true do |f|%>
