--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -1,5 +1,7 @@
 <div class="chat-header">
-  <div class="group-name">hogefuga</div>
+  <div class="group-name">
+    <%= @room.name %>
+  </div>
   <div class="finish-chat">
     <a href="#">チャットを終了する</a>
   </div>
